branches/wip/Archive/f2065056c25037086d46d8b35102789b-25dabfc2c190f5ef027f31d968947336/output
main.cpp:46:18: error: no matching function for call to 'RemoveLinks'
    std::cout << Utils::RemoveLinks(link) << std::endl;
                 ^~~~~~~~~~~~~~~~~~
main.cpp:26:16: note: candidate function not viable: no known conversion from 'Link<Link<int &> >' to 'const int' for 1st argument
constexpr auto RemoveLinks(const int& any) -> const int&
               ^
main.cpp:32:16: note: candidate template ignored: substitution failure [with T = Link<int &>]: call to function 'RemoveLinks' that is neither visible in the template definition nor found by argument-dependent lookup
constexpr auto RemoveLinks(const Link<T>& link) -> decltype(RemoveLinks(link.val))
               ^                                            ~~~~~~~~~~~
1 error generated.
